[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dascripts"
version = "0.1.2"
description = "Quick EDA tools for data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "nguyentp2"}
]
classifiers = []
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[tool.setuptools]
packages = ["dascripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py310"]
