[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dascripts"
version = "0.1.4"
description = "Quick EDA tools for data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "nguyentp"}
]
classifiers = []
urls = {GitHub = "https://github.com/nguyentp/dascripts"}
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "seaborn",
    "scikit-learn",
    'xgboost',
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[tool.setuptools]
packages = ["dascripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py310"]
